--- a/style1.css
+++ b/style1.css
@@ -1,15 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Sawarabi+Mincho&display=swap');
 
 body {
-    padding-top: 4rem;
+    padding-top: -4rem;
 }
 
-h1 {
+h1, h2, h3, h4 {
     color: white;
     font-family: 'Noto Sans JP', sans-serif;
 }
 
-p {
+p, ul, li {
     color: white;
     font-family: 'Sawarabi Mincho', sans-serif;
 }
@@ -20,4 +20,8 @@ p {
 
 .jumbotron {
     background-color: #343A40 !important;
+}
+
+#section-post {
+    padding-right: 16rem !important;
 }
