added date for entries; started JS arrays function

--- a/style1.css
+++ b/style1.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Sawarabi+Mincho&display=swap');
 
 
-h1, h2, h3, h4 {
+h1, h2, h3, h4, h5 {
     color: white;
     font-family: 'Noto Sans JP', sans-serif;
 }
